[package]
name = "client-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interface"
path = "src/interface.rs"

[[bin]]
name = "model"
path = "src/model.rs"

[dependencies]
kiss3d = "0.24"
nalgebra = "*"
event-loop = "*"

# gui
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
